# notes

./: .gitignore  .markdownlint.json
docker/: docker_build.sh  docker_into.sh  docker_run.sh  notes.dockerfile
language/c和c++/: CPU绑定和程序优先级设置.md  c++.md  c++新特性.md  c.md  unix环境编程.md  内存对齐.md  环境表.md  编译库文件.md
language/c和c++/code/c++/: 001_first.cpp  002_second.cpp  003_namespace.cpp  005_using_namespace.cpp  006_namespace_in_namespace.cpp  007_no_name_space.cpp  008_struct.cpp  009_union.cpp  013_cppfunction.cpp  015_cfunction.c  020_default.cpp  023_new.cpp  026_swap.cpp  028_static_cast.cpp  030_struct_car.cpp  032_struct_clock.cpp  035_init_list.cpp  037_this.cpp  039_const.cpp  042_newArry.cpp  045_copyArry.cpp  047_static_function.cpp  049_static_relation.cpp  050_static_singleton.cpp  051_point.cpp  052_point.cpp  055_Fraction.cpp  061_myauto_ptr.cpp  063_iterator_new_delete.cpp  064_new_delete.cpp  065_arr_ref.cpp  066_inheritence.cpp  069_protected.cpp  071_inheri_constructor.cpp  074_namehide.cpp  076_muti_inheri.cpp  078_overwrite.cpp  080_vtale_ptr.cpp  082_vtale_use.cpp  083_class_typeid.cpp  (+6 more)
language/c和c++/code/c++/095/: mydate.h
language/c和c++/code/common/: Timer.h
language/c和c++/code/unix/: EditUCEffective.c  NoNamepipe.c  TCPA.c  TCPB.c  UCEffective.c  UDPA.c  UDPB.c  access.c  alarm.c  brk.c  dir.c  dirC.c  dup2.c  environment.c  exit.c  forkmemory.c  itimer.c  kill.c  lseek.c  mmap2.c  msgB.c  open_close.c  pipeA.c  pipeB.c  practice_pthread_join.c  pragma_dependency.c  pragma_packn.c  pragma_poison.c  processRelation.c  pthread_create2.c  pthread_detach.c  shmA.c  shmB.c  sigaction.c  sigaction2.c  sigprocmask.c  sockA.c  socknetA.c  stat.c  system.c  (+2 more)
language/c和c++/code/unix/liba/: CMakeLists.txt  adder.h
language/c和c++/code/unix/libdl/: adder.c  dynamic.c
language/c和c++/code/unix/libso/: CMakeLists.txt  main.c
language/c和c++/common/: Random.h  Time.h
language/c和c++/测试代码/c++/: 004_using_declare.cpp  010_enum.cpp  011_bool.cpp  012_symbol.cpp  014_overload.cpp  016_cppfunction.cpp  017_cfun.c  018_cppcallcfun.cpp  019_dummy.cpp  021_default.cpp  022_define.cpp  024_reference.cpp  025_return.cpp  027_const_cast.cpp  029_class_date.cpp  031_struct_clock_system.cpp  033_class_date.cpp  034_class.cpp  036_init_list.cpp  038_use_this.cpp  040_const.cpp  041_desconstructor.cpp  043_newmalloc.cpp  044_copy.cpp  046_copyclass.cpp  048_static_var.cpp  053_Fraction.cpp  054_Fraction.cpp  056_Integer.cpp  057_Integer.cpp  058_Integer.cpp  059_Array.cpp  060_brackets.cpp  062_iterator.cpp  067_radiovscar.cpp  068_public.cpp  070_private.cpp  072_inheri_copyconstructor.cpp  073_inheri_copyconstructor.cpp  075_muti_inheri.cpp  (+7 more)
language/c和c++/测试代码/c++/094/: main.cpp  mytime.cpp  mytime.h
language/c和c++/测试代码/c++/095/: date.cpp  main.cpp
language/c和c++/测试代码/c++/096/: Dmsexception.h  testDmsexception.cpp
language/c和c++/测试代码/unix/: CMakeLists.txt  FcntlFsetlkA.c  FcntlFsetlkB.c  Rmmap2.c  brk_sbrk.c  chmod_truncate.c  dup.c  effective.c  environ.c  errno.c  error.c  execl.c  fd.c  fgetlck.c  fork.c  forksignal.c  line.c  malloc.c  mmap.c  msgA.c  pthread_cancel.c  pthread_create.c  pthread_create3.c  pthread_exit.c  pthread_join.c  pthread_mutex.c  pthread_sem.c  raise.c  read.c  read_UCemp.c  semset.c  semsettest.c  signal.c  sigqueue.c  sigset_t.c  sockB.c  socknetB.c  testfsetlk.c  umask.c  vfork.c  (+4 more)
language/c和c++/测试代码/unix/libdl/: CMakeLists.txt
language/python/: python.md
language/python/Python爬虫/: BeautifulSoup的使用.md  Python2与Python3 urllib库对照表.md  SCRAPY框架爬虫.md  http和https协议.md  lxml的使用.md  user-agent.md  使用进程池爬取猫眼电影的信息.md  动态网页爬虫.md  有道翻译 - 表单数据示例.md  爬虫基本常识.md  爬虫的抓取策略.md  百度搜索爬虫.md  简单爬虫.md  网页信息提取.md
language/python/imgs/: test.py
language/python/人工智能基础/: 人脸识别.md  分类问题.md  回归模型.md  图像识别.md  推荐引擎.md  支持向量机.md  数据预处理.md  神经网络.md  聚类.md  自然语言处理.md  语音合成和语音识别.md
language/python/数据分析基础/: numpy便捷函数.md  numpy判等断言.md  numpy基础.md  numpy子模块.md  numpy通用函数.md  比较大小、排序、查找.md  矩阵和通用函数.md
language/rust/: Rust语言圣经.md  rust.md
language/rust/code/complex-num/src/: main.rs
language/rust/code/notes_rust_code/: Cargo.toml
language/rust/code/variables/src/: main.rs
language/shell/: shell.md
language/web/: css.md  django.md  html.md  jQuery.md  js.md  web.md
language/常用算法与数据结构/: 二叉树.md  单链表.md  排序.md  数据结构.md  栈.md  队列.md
linux/: linux命令的使用.md  linux环境变量.md  ubuntu-20.04使用中的常见问题.md  ubuntu-20.04修改软件源.md  ubuntu-20.04常用库命令行安装.md  ubuntu-20.04常用库源码安装.md  ubuntu-20.04开发环境搭建.md  ubuntu常用软件安装和使用.md  正则表达式.md
tools/cmake/: 从可执行文件到库.md  创建和运行测试.md  常用库find_package.md  检测外部库和程序.md  检测环境.md  编译器的工作过程.md
tools/cmake/Makefile/: Makefile入门.md
tools/cmake/Makefile/example/: Makefile
tools/cmake/编译加速/: 编译加速.md
tools/cmake/编译加速/ccache/: ccache.md
tools/cmake/编译加速/ccache/example/: CMakeLists.txt
tools/cmake/编译加速/ccache/example/include/: math.hpp
tools/cmake/编译加速/ccache/example/src/: main.cc  math.cc
tools/cmake/编译加速/distcc/: distcc.md
tools/cmake/编译加速/distcc/example/: CMakeLists.txt
tools/cmake/编译加速/distcc/example/include/: add.hpp  multi.hpp  sub.hpp
tools/cmake/编译加速/distcc/example/src/: add.cc  main.cc  multi.cc  sub.cc
tools/cmake/编译加速/include-what-you-use/: include-what-you-use.md
tools/cmake/编译加速/预编译头文件/: 预编译头文件.md
tools/cmake/编译加速/预编译头文件/example/: CMakeLists.txt
tools/cmake/编译加速/预编译头文件/example/include/: hello.hpp
tools/cmake/编译加速/预编译头文件/example/src/: main.cc
tools/docker/: docker.md
tools/vscode/: vscode插件.md  在vscode中使用markdown.md
tools/vscode/sources/: test.cc
嵌入式/kernel/: IO空间和内存空间.md  printk打印.md  中断.md  内存拷贝函数.md  内核延时.md  地址映射.md  并发和竞态.md  用户态和内核态.md  等待队列.md  系统调用.md  设备驱动分离思想.md  阻塞和非阻塞.md
嵌入式/体系结构/ARM/: ARM工作模式和寄存器.md  ARM汇编.md  异常处理.md  指令集与指令结构.md
性能优化/: 性能优化分析工具.md  性能分析工具perf的使用.md  火焰图.md  系统优化与应用优化.md  编译器优化.md
性能优化/example/off_cpu/: main.cc
性能优化/example/on_cpu/: main.cc  main_diff.cc  main_rb.cc
数据库/mongodb/: mongodb.md
数据库/mysql/: mysql-1.md  mysql-2.md
数据库/oracle/: oracle-sql.md  plsql-1.md  plsql-2.md  proc.md
深度学习与神经网络/: 深度学习与神经网络.md
音视频/: 音视频.md
(+12 files in other folders)
